Update from upstream
Remove support for ProtectTrackId

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,8 +1,8 @@
 {
     "DisableSiteTracking": {
-        "FormTitle": "Disabled-State Overview",
+        "FormTitle":         "Disable tracking - Overview",
         "SiteDisabledLabel": "Disabled",
-        "SiteNameLabel": "Name",
-        "SaveButtonLabel": "Save"
+        "SiteNameLabel":     "Name",
+        "SaveButtonLabel":   "Save"
     }
 }
